# nextlib

./: README.md  build.gradle.kts
.github/workflows/: build.yaml
ffmpeg/: setup.sh
gradle/: libs.versions.toml
media3ext/src/main/cpp/: CMakeLists.txt  ffaudio.cpp  ffmain.cpp  ffvideo.cpp
media3ext/src/main/java/io/github/anilbeesetti/nextlib/media3ext/ffdecoder/: FFmpegOnlyRenderersFactory.kt  FfmpegAudioDecoder.java  FfmpegAudioRenderer.java  FfmpegDecoderException.java  FfmpegLibrary.java  FfmpegVideoDecoder.java  FfmpegVideoRenderer.java  NextRenderersFactory.kt
mediainfo/src/main/cpp/: CMakeLists.txt
